{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 78,
  "lineage": "b2920a8e-da17-136c-ca8c-83392dd3105f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "additional",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:531807594086:security-group/sg-07923be16e0d7df76",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-07923be16e0d7df76",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8",
                  "172.16.0.0/12",
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "eks-nebulance-additional20250715200715558000000009",
            "name_prefix": "eks-nebulance-additional",
            "owner_id": "531807594086",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-nebulance-additional"
            },
            "tags_all": {
              "Cluster": "eks-nebulance",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "eks-nebulance-additional",
              "Project": "DevOps-Bootcamp-EKS"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e571ce92ba6626d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:531807594086:security-group/sg-05da7b8b11ee6526e",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-05da7b8b11ee6526e",
            "ingress": [],
            "name": "eks-nebulance-cluster-2025071520071680330000000f",
            "name_prefix": "eks-nebulance-cluster-",
            "owner_id": "531807594086",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-nebulance-cluster"
            },
            "tags_all": {
              "Cluster": "eks-nebulance",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "eks-nebulance-cluster",
              "Project": "DevOps-Bootcamp-EKS"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e571ce92ba6626d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:531807594086:security-group/sg-0899605d1821f5f01",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0899605d1821f5f01",
            "ingress": [],
            "name": "eks-nebulance-node-2025071520071622060000000e",
            "name_prefix": "eks-nebulance-node-",
            "owner_id": "531807594086",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-nebulance-node",
              "kubernetes.io/cluster/eks-nebulance": "owned"
            },
            "tags_all": {
              "Cluster": "eks-nebulance",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "eks-nebulance-node",
              "Project": "DevOps-Bootcamp-EKS",
              "kubernetes.io/cluster/eks-nebulance": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e571ce92ba6626d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-190279823",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05da7b8b11ee6526e",
            "security_group_rule_id": "sgr-094a479742f54e5cd",
            "self": false,
            "source_security_group_id": "sg-0899605d1821f5f01",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-3743894138",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0899605d1821f5f01",
            "security_group_rule_id": "sgr-0dc8ac34adafa98d6",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-852240606",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0899605d1821f5f01",
            "security_group_rule_id": "sgr-06e420477f260b084",
            "self": false,
            "source_security_group_id": "sg-05da7b8b11ee6526e",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-634256859",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0899605d1821f5f01",
            "security_group_rule_id": "sgr-0fb50260ca55f74d3",
            "self": false,
            "source_security_group_id": "sg-05da7b8b11ee6526e",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-3968834125",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0899605d1821f5f01",
            "security_group_rule_id": "sgr-011e4af4be2ffc40a",
            "self": false,
            "source_security_group_id": "sg-05da7b8b11ee6526e",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-4292060780",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0899605d1821f5f01",
            "security_group_rule_id": "sgr-0c2d80a1205e783c9",
            "self": false,
            "source_security_group_id": "sg-05da7b8b11ee6526e",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-2607977895",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0899605d1821f5f01",
            "security_group_rule_id": "sgr-0ad04d5e2c8f72c01",
            "self": false,
            "source_security_group_id": "sg-05da7b8b11ee6526e",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-359001930",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0899605d1821f5f01",
            "security_group_rule_id": "sgr-02ef92a279860d3a1",
            "self": false,
            "source_security_group_id": "sg-05da7b8b11ee6526e",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-603932570",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0899605d1821f5f01",
            "security_group_rule_id": "sgr-097f25de6d2d4029d",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-4209860722",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0899605d1821f5f01",
            "security_group_rule_id": "sgr-034c601372e37dd93",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-1588773789",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0899605d1821f5f01",
            "security_group_rule_id": "sgr-05d81d5e92523b8d5",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:531807594086:network-acl/acl-03604e9eac5af908a",
            "default_network_acl_id": "acl-03604e9eac5af908a",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-03604e9eac5af908a",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "531807594086",
            "subnet_ids": [
              "subnet-03f818e8f5a2f15e0",
              "subnet-0464c609ceee81134"
            ],
            "tags": {
              "Name": "eks-nebulance-vpc-default",
              "kubernetes.io/cluster/eks-nebulance": "shared"
            },
            "tags_all": {
              "Cluster": "eks-nebulance",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "eks-nebulance-vpc-default",
              "Project": "DevOps-Bootcamp-EKS",
              "kubernetes.io/cluster/eks-nebulance": "shared"
            },
            "vpc_id": "vpc-04e571ce92ba6626d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:531807594086:route-table/rtb-0d2512b9be1bf5d87",
            "default_route_table_id": "rtb-0d2512b9be1bf5d87",
            "id": "rtb-0d2512b9be1bf5d87",
            "owner_id": "531807594086",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "eks-nebulance-vpc-default",
              "kubernetes.io/cluster/eks-nebulance": "shared"
            },
            "tags_all": {
              "Cluster": "eks-nebulance",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "eks-nebulance-vpc-default",
              "Project": "DevOps-Bootcamp-EKS",
              "kubernetes.io/cluster/eks-nebulance": "shared"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-04e571ce92ba6626d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:531807594086:security-group/sg-00173cf0e14b9eb77",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-00173cf0e14b9eb77",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "531807594086",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-nebulance-vpc-default",
              "kubernetes.io/cluster/eks-nebulance": "shared"
            },
            "tags_all": {
              "Cluster": "eks-nebulance",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "eks-nebulance-vpc-default",
              "Project": "DevOps-Bootcamp-EKS",
              "kubernetes.io/cluster/eks-nebulance": "shared"
            },
            "vpc_id": "vpc-04e571ce92ba6626d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b8d4ea649d2a984c",
            "arn": "arn:aws:ec2:eu-central-1:531807594086:elastic-ip/eipalloc-0b8d4ea649d2a984c",
            "domain": "vpc",
            "id": "eipalloc-0b8d4ea649d2a984c",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-52-29-25-170.eu-central-1.compute.amazonaws.com",
            "public_ip": "52.29.25.170",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eks-nebulance-vpc-eu-central-1a",
              "kubernetes.io/cluster/eks-nebulance": "shared"
            },
            "tags_all": {
              "Cluster": "eks-nebulance",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "eks-nebulance-vpc-eu-central-1a",
              "Project": "DevOps-Bootcamp-EKS",
              "kubernetes.io/cluster/eks-nebulance": "shared"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c6551cd0db58f939",
            "arn": "arn:aws:ec2:eu-central-1:531807594086:elastic-ip/eipalloc-0c6551cd0db58f939",
            "domain": "vpc",
            "id": "eipalloc-0c6551cd0db58f939",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-63-178-180-109.eu-central-1.compute.amazonaws.com",
            "public_ip": "63.178.180.109",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eks-nebulance-vpc-eu-central-1b",
              "kubernetes.io/cluster/eks-nebulance": "shared"
            },
            "tags_all": {
              "Cluster": "eks-nebulance",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "eks-nebulance-vpc-eu-central-1b",
              "Project": "DevOps-Bootcamp-EKS",
              "kubernetes.io/cluster/eks-nebulance": "shared"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07da942d89a59cbb5",
            "arn": "arn:aws:ec2:eu-central-1:531807594086:elastic-ip/eipalloc-07da942d89a59cbb5",
            "domain": "vpc",
            "id": "eipalloc-07da942d89a59cbb5",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-52-57-91-235.eu-central-1.compute.amazonaws.com",
            "public_ip": "52.57.91.235",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eks-nebulance-vpc-eu-central-1c",
              "kubernetes.io/cluster/eks-nebulance": "shared"
            },
            "tags_all": {
              "Cluster": "eks-nebulance",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "eks-nebulance-vpc-eu-central-1c",
              "Project": "DevOps-Bootcamp-EKS",
              "kubernetes.io/cluster/eks-nebulance": "shared"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:531807594086:internet-gateway/igw-095a39109992378c8",
            "id": "igw-095a39109992378c8",
            "owner_id": "531807594086",
            "tags": {
              "Name": "eks-nebulance-vpc",
              "kubernetes.io/cluster/eks-nebulance": "shared"
            },
            "tags_all": {
              "Cluster": "eks-nebulance",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "eks-nebulance-vpc",
              "Project": "DevOps-Bootcamp-EKS",
              "kubernetes.io/cluster/eks-nebulance": "shared"
            },
            "vpc_id": "vpc-04e571ce92ba6626d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b8d4ea649d2a984c",
            "association_id": "eipassoc-0a11e0732beae3574",
            "connectivity_type": "public",
            "id": "nat-02bbf892a33b168df",
            "network_interface_id": "eni-01bbc99284c89f804",
            "private_ip": "10.0.4.216",
            "public_ip": "52.29.25.170",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0464c609ceee81134",
            "tags": {
              "Name": "eks-nebulance-vpc-eu-central-1a",
              "kubernetes.io/cluster/eks-nebulance": "shared"
            },
            "tags_all": {
              "Cluster": "eks-nebulance",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "eks-nebulance-vpc-eu-central-1a",
              "Project": "DevOps-Bootcamp-EKS",
              "kubernetes.io/cluster/eks-nebulance": "shared"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c6551cd0db58f939",
            "association_id": "eipassoc-0da1124a500f39925",
            "connectivity_type": "public",
            "id": "nat-021626c9f2ff8d88c",
            "network_interface_id": "eni-06e61c6cc6688dcc7",
            "private_ip": "10.0.5.115",
            "public_ip": "63.178.180.109",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0489b38afa3940160",
            "tags": {
              "Name": "eks-nebulance-vpc-eu-central-1b",
              "kubernetes.io/cluster/eks-nebulance": "shared"
            },
            "tags_all": {
              "Cluster": "eks-nebulance",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "eks-nebulance-vpc-eu-central-1b",
              "Project": "DevOps-Bootcamp-EKS",
              "kubernetes.io/cluster/eks-nebulance": "shared"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07da942d89a59cbb5",
            "association_id": "eipassoc-0915db01cafda6a76",
            "connectivity_type": "public",
            "id": "nat-0517ceac652cb1aed",
            "network_interface_id": "eni-08a21397f66ee9be0",
            "private_ip": "10.0.6.89",
            "public_ip": "52.57.91.235",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03f818e8f5a2f15e0",
            "tags": {
              "Name": "eks-nebulance-vpc-eu-central-1c",
              "kubernetes.io/cluster/eks-nebulance": "shared"
            },
            "tags_all": {
              "Cluster": "eks-nebulance",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "eks-nebulance-vpc-eu-central-1c",
              "Project": "DevOps-Bootcamp-EKS",
              "kubernetes.io/cluster/eks-nebulance": "shared"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a4a692787cba676d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-02bbf892a33b168df",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a4a692787cba676d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ecd6de08968e385c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-021626c9f2ff8d88c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ecd6de08968e385c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-083a033c17215bfba1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0517ceac652cb1aed",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-083a033c17215bfba",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-095a39109992378c8",
            "id": "r-rtb-0de859c7f673cbcc61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0de859c7f673cbcc6",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:531807594086:route-table/rtb-0a4a692787cba676d",
            "id": "rtb-0a4a692787cba676d",
            "owner_id": "531807594086",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "eks-nebulance-vpc-private-eu-central-1a",
              "kubernetes.io/cluster/eks-nebulance": "shared"
            },
            "tags_all": {
              "Cluster": "eks-nebulance",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "eks-nebulance-vpc-private-eu-central-1a",
              "Project": "DevOps-Bootcamp-EKS",
              "kubernetes.io/cluster/eks-nebulance": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e571ce92ba6626d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:531807594086:route-table/rtb-0ecd6de08968e385c",
            "id": "rtb-0ecd6de08968e385c",
            "owner_id": "531807594086",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "eks-nebulance-vpc-private-eu-central-1b",
              "kubernetes.io/cluster/eks-nebulance": "shared"
            },
            "tags_all": {
              "Cluster": "eks-nebulance",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "eks-nebulance-vpc-private-eu-central-1b",
              "Project": "DevOps-Bootcamp-EKS",
              "kubernetes.io/cluster/eks-nebulance": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e571ce92ba6626d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:531807594086:route-table/rtb-083a033c17215bfba",
            "id": "rtb-083a033c17215bfba",
            "owner_id": "531807594086",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "eks-nebulance-vpc-private-eu-central-1c",
              "kubernetes.io/cluster/eks-nebulance": "shared"
            },
            "tags_all": {
              "Cluster": "eks-nebulance",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "eks-nebulance-vpc-private-eu-central-1c",
              "Project": "DevOps-Bootcamp-EKS",
              "kubernetes.io/cluster/eks-nebulance": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e571ce92ba6626d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:531807594086:route-table/rtb-0de859c7f673cbcc6",
            "id": "rtb-0de859c7f673cbcc6",
            "owner_id": "531807594086",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "eks-nebulance-vpc-public",
              "kubernetes.io/cluster/eks-nebulance": "shared"
            },
            "tags_all": {
              "Cluster": "eks-nebulance",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "eks-nebulance-vpc-public",
              "Project": "DevOps-Bootcamp-EKS",
              "kubernetes.io/cluster/eks-nebulance": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e571ce92ba6626d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-046dca01efecc70dc",
            "route_table_id": "rtb-0a4a692787cba676d",
            "subnet_id": "subnet-04caecee169029cdd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bdfa9ee0033e5b6b",
            "route_table_id": "rtb-0ecd6de08968e385c",
            "subnet_id": "subnet-07d64617eb5aee436"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-049fb41f77117b318",
            "route_table_id": "rtb-083a033c17215bfba",
            "subnet_id": "subnet-0910b60e0da248c17"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e0d868071524228",
            "route_table_id": "rtb-0de859c7f673cbcc6",
            "subnet_id": "subnet-0464c609ceee81134"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a5162b0713728d5",
            "route_table_id": "rtb-0de859c7f673cbcc6",
            "subnet_id": "subnet-0489b38afa3940160"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03f55a671ed917e99",
            "route_table_id": "rtb-0de859c7f673cbcc6",
            "subnet_id": "subnet-03f818e8f5a2f15e0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:531807594086:subnet/subnet-04caecee169029cdd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04caecee169029cdd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "531807594086",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-nebulance-vpc-private-eu-central-1a",
              "kubernetes.io/cluster/eks-nebulance": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Cluster": "eks-nebulance",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "eks-nebulance-vpc-private-eu-central-1a",
              "Project": "DevOps-Bootcamp-EKS",
              "kubernetes.io/cluster/eks-nebulance": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-04e571ce92ba6626d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:531807594086:subnet/subnet-07d64617eb5aee436",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d64617eb5aee436",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "531807594086",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-nebulance-vpc-private-eu-central-1b",
              "kubernetes.io/cluster/eks-nebulance": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Cluster": "eks-nebulance",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "eks-nebulance-vpc-private-eu-central-1b",
              "Project": "DevOps-Bootcamp-EKS",
              "kubernetes.io/cluster/eks-nebulance": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-04e571ce92ba6626d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:531807594086:subnet/subnet-0910b60e0da248c17",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0910b60e0da248c17",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "531807594086",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-nebulance-vpc-private-eu-central-1c",
              "kubernetes.io/cluster/eks-nebulance": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Cluster": "eks-nebulance",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "eks-nebulance-vpc-private-eu-central-1c",
              "Project": "DevOps-Bootcamp-EKS",
              "kubernetes.io/cluster/eks-nebulance": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-04e571ce92ba6626d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:531807594086:subnet/subnet-0464c609ceee81134",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0464c609ceee81134",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "531807594086",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-nebulance-vpc-public-eu-central-1a",
              "kubernetes.io/cluster/eks-nebulance": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Cluster": "eks-nebulance",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "eks-nebulance-vpc-public-eu-central-1a",
              "Project": "DevOps-Bootcamp-EKS",
              "kubernetes.io/cluster/eks-nebulance": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-04e571ce92ba6626d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:531807594086:subnet/subnet-0489b38afa3940160",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0489b38afa3940160",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "531807594086",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-nebulance-vpc-public-eu-central-1b",
              "kubernetes.io/cluster/eks-nebulance": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Cluster": "eks-nebulance",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "eks-nebulance-vpc-public-eu-central-1b",
              "Project": "DevOps-Bootcamp-EKS",
              "kubernetes.io/cluster/eks-nebulance": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-04e571ce92ba6626d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:531807594086:subnet/subnet-03f818e8f5a2f15e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03f818e8f5a2f15e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "531807594086",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-nebulance-vpc-public-eu-central-1c",
              "kubernetes.io/cluster/eks-nebulance": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Cluster": "eks-nebulance",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "eks-nebulance-vpc-public-eu-central-1c",
              "Project": "DevOps-Bootcamp-EKS",
              "kubernetes.io/cluster/eks-nebulance": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-04e571ce92ba6626d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:531807594086:vpc/vpc-04e571ce92ba6626d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03604e9eac5af908a",
            "default_route_table_id": "rtb-0d2512b9be1bf5d87",
            "default_security_group_id": "sg-00173cf0e14b9eb77",
            "dhcp_options_id": "dopt-0970f13602fe64397",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04e571ce92ba6626d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d2512b9be1bf5d87",
            "owner_id": "531807594086",
            "tags": {
              "Name": "eks-nebulance-vpc",
              "kubernetes.io/cluster/eks-nebulance": "shared"
            },
            "tags_all": {
              "Cluster": "eks-nebulance",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "eks-nebulance-vpc",
              "Project": "DevOps-Bootcamp-EKS",
              "kubernetes.io/cluster/eks-nebulance": "shared"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}